# Usage_of_some_Cpp_Standard_Libraries_with_Cpp20_Features

./: README.md
Standard_Library_Algorithms/Non-Modifying_Operations/: 01_existence_queries.cpp  01_existence_queries_cpp_20.cpp  02_find_single_element.cpp  02_find_single_element_cpp_20.cpp  03_find_run_of_equal_elements.cpp  03_find_run_of_equal_elements_cpp_20.cpp  04_find_sub_ranges.cpp  04_find_sub_ranges_cpp_20.cpp  05_comparing_ranges.cpp  05_comparing_ranges_cpp_20.cpp  06_maximum_minimum.cpp  06_maximum_minimum_cpp_20.cpp  07_binary_search_of_sorted_ranges.cpp  07_binary_search_of_sorted_ranges_cpp_20.cpp  08_structural_properties.cpp  08_structural_properties_cpp_20.cpp  09_traversing_ranges.cpp  09_traversing_ranges_cpp_17_20.cpp  CMakeLists.txt
