cmake_minimum_required(VERSION 3.20.2)
project(Non_Modifying_Operations)

set(CMAKE_CXX_STANDARD 20)

add_executable(01_existence_queries 01_existence_queries.cpp)
add_executable(01_existence_queries_cpp_20 01_existence_queries_cpp_20.cpp)
add_executable(02_find_single_element 02_find_single_element.cpp)
add_executable(02_find_single_element_cpp_20 02_find_single_element_cpp_20.cpp)
add_executable(03_find_run_of_equal_elements 03_find_run_of_equal_elements.cpp)
add_executable(03_find_run_of_equal_elements_cpp_20 03_find_run_of_equal_elements_cpp_20.cpp)
add_executable(04_find_sub_ranges 04_find_sub_ranges.cpp)
add_executable(04_find_sub_ranges_cpp_20 04_find_sub_ranges_cpp_20.cpp)
add_executable(05_comparing_ranges 05_comparing_ranges.cpp)
add_executable(05_comparing_ranges_cpp_20 05_comparing_ranges_cpp_20.cpp)
add_executable(06_maximum_minimum 06_maximum_minimum.cpp)
add_executable(06_maximum_minimum_cpp_20 06_maximum_minimum_cpp_20.cpp)
add_executable(07_binary_search_of_sorted_ranges 07_binary_search_of_sorted_ranges.cpp)
add_executable(07_binary_search_of_sorted_ranges_cpp_20 07_binary_search_of_sorted_ranges_cpp_20.cpp)
add_executable(08_structural_properties 08_structural_properties.cpp)
add_executable(08_structural_properties_cpp_20 08_structural_properties_cpp_20.cpp)
add_executable(09_traversing_ranges 09_traversing_ranges.cpp)
add_executable(09_traversing_ranges_cpp_17_20 09_traversing_ranges_cpp_17_20.cpp)